--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -111,26 +111,46 @@ header .content {
         display: block; } }
 
 header .nav-mobile {
-  background: #ffffff;
+  background-color: #e1e1e1;
+  background-image: url("/assets/img/BG-Texture-Repeatable.png");
   position: absolute;
   top: -100%;
   left: 0;
   width: 100%;
-  padding-top: 95px;
-  border-bottom: 2px solid #efefef;
+  padding-top: 5px;
   z-index: 100;
-  transition: 0.5s ease-in-out; }
+  transition: 0.5s ease-in-out;
+  opacity: 1;
+  -webkit-box-shadow: inset 0px 5px 20px 0px rgba(0, 0, 0, 0.21);
+  -moz-box-shadow: inset 0px 5px 20px 0px rgba(0, 0, 0, 0.21);
+  box-shadow: inset 0px 5px 20px 0px rgba(0, 0, 0, 0.21); }
   header .nav-mobile.open {
-    top: 0; }
+    top: 90px;
+    opacity: 1; }
+    header .nav-mobile.open:after {
+      opacity: 1;
+      transition-delay: 0;
+      transition: 2s ease-in-out; }
   header .nav-mobile .nav-item {
     padding: 20px 0;
     text-align: center;
-    border-top: 2px solid #efefef; }
+    border-bottom: 2px solid #d4d4d4; }
     header .nav-mobile .nav-item a {
       font-weight: 600; }
+  header .nav-mobile:after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -200px;
+    width: 100%;
+    height: 200px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
+    opacity: 0;
+    transition-delay: 2s;
+    transition: 2s ease-in-out; }
 
 main {
-  background: url("/atg-stage/assets/img/BG-Texture-Repeatable.png"); }
+  background: url("/assets/img/BG-Texture-Repeatable.png"); }
 
 footer {
   background: #e1e1e1; }
@@ -255,13 +275,14 @@ footer {
 .hero {
   width: 100%;
   height: 425px;
-  background: url("/atg-stage/assets/img/Hero.jpg");
-  background-size: cover;
+  background: url("/assets/img/Hero.jpg");
+  background-size: cover !important;
   background-position: center center; }
   @media screen and (max-width: 768px) {
     .hero {
       height: 350px;
-      background-position: right center; } }
+      background-position: right center !important;
+      background: url("/assets/img/Hero-mobile.jpg"); } }
 
 .brands {
   display: flex; }
@@ -287,9 +308,9 @@ footer {
       margin-right: 0;
       margin-bottom: 0; }
     .brands .brand.brand-freightliner .bg {
-      background: url("/atg-stage/assets/img/Freightliner-Image.jpg"); }
+      background: url("/assets/img/Freightliner-Image.jpg"); }
     .brands .brand.brand-westernstar .bg {
-      background: url("/atg-stage/assets/img/Western-Star-Image.jpg"); }
+      background: url("/assets/img/Western-Star-Image.jpg"); }
     .brands .brand .bg {
       width: 100%;
       padding-bottom: 100%;
@@ -361,7 +382,7 @@ footer {
         box-sizing: border-box;
         margin-top: 30px;
         padding: 40px 30px 30px 30px;
-        background: url("/atg-stage/assets/img/Contact-Us-CTA-BG.png");
+        background: url("/assets/img/Contact-Us-CTA-BG.png");
         background-size: cover;
         background-position: center center;
         color: #ffffff;
