--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -118,31 +118,53 @@ header{
     }
   }
   .nav-mobile{
-    background:$white;
+    background-color:$grey;
+    background-image:url('/assets/img/BG-Texture-Repeatable.png');
     position: absolute;
     top:-100%;
     left:0;
     width:100%;
-    padding-top:95px;
-    border-bottom:2px solid #efefef;
+    padding-top: 5px;
     z-index: 100;
     transition:0.5s ease-in-out;
+    opacity:1;
+    -webkit-box-shadow: inset 0px 5px 20px 0px rgba(0,0,0,0.21);
+    -moz-box-shadow: inset 0px 5px 20px 0px rgba(0,0,0,0.21);
+    box-shadow: inset 0px 5px 20px 0px rgba(0,0,0,0.21);
     &.open{
-      top:0;
+      top: 90px;
+      opacity:1;
+      &:after{
+        opacity:1;
+        transition-delay:0;
+        transition:2s ease-in-out;
+      }
     }
     .nav-item{
       padding:$padding-mobile 0;
       text-align: center;
-      border-top:2px solid #efefef;
+      border-bottom:2px solid darken($grey,5%);
       a{
         font-weight:600;
       }
+    }
+    &:after{
+      content:'';
+      display:block;
+      position: absolute;
+      bottom:-200px;
+      width:100%;
+      height:200px;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0) 100%);
+      opacity:0;
+      transition-delay:2s;
+      transition:2s ease-in-out;
     }
   }
 }
 
 main{
-  background:url('/atg-stage/assets/img/BG-Texture-Repeatable.png');
+  background:url('/assets/img/BG-Texture-Repeatable.png');
 }
 
 
