--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>ATG</title>
-    <link rel="stylesheet" href="assets/css/bundle.css" type="text/css">
+    <link rel="stylesheet" href="/assets/css/bundle.css" type="text/css">
   </head>
   <body>
     <header>
@@ -29,7 +29,7 @@
           <a href="tel:888-874-9120">888.874.9120</a>
         </div>
         <div class="nav-item">
-          <a class="button locations-link">Locations</a>
+          <a href="#" class="locations-link locations-link-mobile">Locations</a>
         </div>
       </div>
     </header>
