--- a/css/_page.scss
+++ b/css/_page.scss
@@ -20,6 +20,7 @@
     margin-right:$padding;
     width:50%;
     position: relative;
+    transition:$transition;
     @media screen and (min-width: 767px) and (max-width: 1023px){
       margin-right:$padding-mobile;
       margin-bottom:0;
@@ -50,6 +51,9 @@
     }
 
     &:hover{
+      -webkit-box-shadow: 0px 0px $padding-half 0px rgba(0,0,0,0.35);
+      -moz-box-shadow: 0px 0px $padding-half 0px rgba(0,0,0,0.35);
+      box-shadow: 0px 0px $padding-half 0px rgba(0,0,0,0.35);
       .bg{
         -webkit-filter: grayscale(100%);
         filter: grayscale(100%);
@@ -61,6 +65,8 @@
       left:0;
       width:100%;
       height:100%;
+      padding:0 $padding;
+      box-sizing:border-box;
       display:flex;
       justify-content:center;
       align-items:center;
@@ -68,11 +74,15 @@
       transition:$transition;
       -webkit-filter: grayscale(0);
       filter: grayscale(0);
+      @media screen and (max-width:768px){
+        padding:0 $padding-half;
+      }
       &:hover{
         background:rgba($red,0.85);
       }
       img{
         z-index:2;
+        max-width:100%;
       }
     }
   }
