--- a/views/partials/brands.ejs
+++ b/views/partials/brands.ejs
@@ -1,11 +1,11 @@
-<section class="content padded" data-0="opacity:0.6" data-center-top="opacity:1;">
+<section class="content padded" data-0="opacity:0.6" data-top="opacity:1;">
   <h2 class="align-center">Choose your truck</h2>
   <div class="brands">
     <div class="brand brand-freightliner">
       <a href="https://freightliner.com/" target="_blank">
         <div class="bg"></div>
         <div class="logo-wrap">
-          <img class="brand-logo" src="/assets/img/Freightliner-Logo.png"/>
+          <img class="brand-logo" src="/assets/img/FL-Logo-02.png"/>
         </div>
       </a>
     </div>
